[package]
name = "yubaba"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "yubaba"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[features]
# Enable the production containerd gRPC client. Requires a reachable containerd
# socket and pulls in tonic + containerd-client. REQUIRED in release artifacts:
# the yubaba binary is curl-fetched from a GitHub release URL (R040-F11), not
# base64-inlined in user-data, so binary size is uncapped. release.yml includes
# this feature in the yubaba-release job. Without it the daemon boots in stub
# mode and /workloads/deploy does nothing.
containerd-integration = [
    "kamaji/containerd-integration",
    "dep:containerd-client",
    "dep:prost-types",
]

# Docker CLI-backed ContainerRuntime for pond/OrbStack. No extra Rust deps —
# shells out to the `docker` binary. Enable this in the desktop/camp build
# that drives the pond yubaba-container.
docker-integration = ["kamaji/docker-integration"]

# In-memory fakes for unit testing (runtime::fake, provider::fake).
# Excluded from release binaries; enable in dev-dependency test targets only.
testing = ["kamaji/testing"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "query"] }
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
futures-core = "0.3"
openraft = { version = "0.9", features = ["serde", "storage-v2"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
# R406-T8: typed error surface on the ConstableClient. Already a transitive
# workspace dep via kamaji-proto + reqwest; no new build cost.
thiserror = "1.0"
# R427-F1: privileged cheers client mints PASETO v4.public tokens locally
# (W159 §Service principals — Ed25519 keypair, no per-call cheers fetch).
# Same envelope cheers-server and kamaji's verifier already use.
pasetors = { version = "0.7", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "sync", "time", "fs"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
tower = { version = "0.5", default-features = false, features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
workload-spec = { package = "yah-workload-spec", version = "0.8.16" }
# R484-T2: shared Kamaji trait + runtime backend impls (containerd, docker,
# fake). Pre-W199 these lived in `yubaba::runtime::*`; now they live in
# kamaji-core and yubaba re-exports the surface through this crate.
kamaji = { version = "0.8.16", features = ["sibling"] }
# R406-T8: Yubaba ↔ Kamaji UDS wire protocol — postcard-framed messages
# shared with the kamaji binary in app/yah/kamaji/.
kamaji-proto = { version = "0.8.16" }
# Shared docker-CLI driver + S3 SigV4 helpers — yubaba owns the pond MinIO
# slot lifecycle from R374-F3 onward. cloud depends on the same crate.
local-driver = { package = "yah-local-driver", version = "0.8.16" }

# Thin pond wire-type surface (PondDeployReq/PondStateRecord/…). Carved out of
# this lib (R483-T5) so clients link the types without yubaba's server closure;
# the server side here re-exports them via `pub use warden_client::*` in pond.rs.
yubaba-client = { path = "../yubaba-client" }

# containerd gRPC client (optional — only with containerd-integration feature)
containerd-client = { version = "0.9", optional = true }
prost-types = { version = "0.14", optional = true }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tower = { version = "0.5", default-features = false, features = ["util"] }
# Integration test harness — used in tests/integration_smoke_filter.rs and
# future F5/F6 integration tests.
cloud = { path = "../cloud", features = ["local-docker"] }
yubaba-test-macros = { path = "../yubaba-test-macros" }
yubaba-test-harness = { path = "../yubaba-test-harness" }
# R406-T8: spawn a real kamaji::serve_with_shutdown inside the
# yubaba↔kamaji integration test (tests/integration_constable_client.rs).
kamaji-bin = { version = "0.8.16" }

# integration_smoke_filter requires containerd-integration for ContainerdRuntime.
[[test]]
name = "integration_smoke_filter"
required-features = ["containerd-integration", "testing"]

# Single-node local mirror E2E — see tests/integration_single_node.rs.
# Requires containerd-integration for ContainerdRuntime. Local tier skips
# gracefully when containerd / Colima is unavailable.
[[test]]
name = "integration_single_node"
required-features = ["containerd-integration"]

# Multi-node mesh: raft cluster bootstrap, partition recovery, quorum-loss.
# See tests/integration_mesh.rs. Local tier: real openraft over loopback HTTP;
# uses ContainerdRuntime (skips gracefully when Colima / containerd unavailable).
# Smoke tier: real Hetzner machines + WireGuard mesh (requires YAH_SMOKE=1).
[[test]]
name = "integration_mesh"
required-features = ["containerd-integration"]

# Public-ingress tests: cloudflared-mock + port-mapping fallback + failure path.
# See tests/integration_public_ingress.rs. Uses FakeRuntime — no real containerd
# or cloudflared required. Run in standard CI without credentials.
[[test]]
name = "integration_public_ingress"
required-features = ["testing"]

# Operator-bridge tests: headscale-mock + preauth-key creation + two modes
# (tailscale | mesh-peer). Uses FakeRuntime — no real containerd or Headscale
# required. Run in standard CI without credentials.
[[test]]
name = "integration_operator_bridge"
required-features = ["testing"]

# R427-T2: ownership-write e2e smoke. Deploy → cheers POST /ownership →
# destroy → cheers DELETE /ownership/{id}. Mock cheers + FakeRuntime; no
# real containerd, no real cheers. Run in standard CI without credentials.
[[test]]
name = "integration_ownership_smoke"
required-features = ["testing"]
